--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+html, 
+body {
+    height: 100%;
+}
+.bg-navbar-light {
+    color : #afd7b8 !important;
+}
+
+.mushroom {
+    background-image: url('/assets/images/mushroom.svg');
+  }
+
+ 
